--- a/static/speech-to-text/package.json
+++ b/static/speech-to-text/package.json
@@ -10,6 +10,9 @@
     "@atlaskit/modal-dialog": "^12.4.0",
     "@atlaskit/textarea": "^4.5.0",
     "@atlaskit/tooltip": "^17.6.0",
+    "@atlaskit/flag": "^14.7.0",
+    "@atlaskit/tokens": "^0.10.19",
+    "@atlaskit/theme": "^12.2.0",
     "@forge/bridge": "^2.1.3",
     "buffer": "^6.0.3",
     "react": "^16.13.1",
