--- a/manifest.yml
+++ b/manifest.yml
@@ -4,7 +4,7 @@ modules:
       resource: main
       resolver:
         function: resolver
-      title: 'Dictation for jira, compose: your text by voice'
+      title: 'Dictation for Jira: compose your text by voice'
       viewportSize: medium
       icon: https://i.ibb.co/Gs8DqZz/VA-logo.png
   function:
